[package]
name = "swiftness_stark"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std", "recursive", "keccak_160_lsb", "stone5"]
std = [
    "dep:thiserror",
    "starknet-core/std",
    "starknet-crypto/std",
    "swiftness_air/std",
    "swiftness_commitment/std",
    "swiftness_fri/std",
    "swiftness_pow/std",
]
dex = ["swiftness_air/dex"]
recursive = [
    "swiftness_air/recursive",
]
recursive_with_poseidon = [
    "swiftness_air/recursive_with_poseidon",
]
small = ["swiftness_air/small"]
starknet = ["swiftness_air/starknet"]
starknet_with_keccak = ["swiftness_air/starknet_with_keccak"]
dynamic = ["swiftness_air/dynamic"]
stone5 = ["swiftness_air/stone5"]
stone6 = ["swiftness_air/stone6"]
keccak_160_lsb = [
    "swiftness_pow/keccak",
    "swiftness_commitment/keccak_160_lsb"
]
keccak_248_lsb = [
    "swiftness_pow/keccak",
    "swiftness_commitment/keccak_248_lsb"
]
blake2s_160_lsb = [
    "swiftness_pow/blake2s",
    "swiftness_commitment/blake2s_160_lsb"
]
blake2s_248_lsb = [
    "swiftness_pow/blake2s",
    "swiftness_commitment/blake2s_248_lsb"
]

[dependencies]
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_air.workspace = true
swiftness_commitment.workspace = true
swiftness_fri.workspace = true
swiftness_pow.workspace = true
swiftness_transcript.workspace = true
