[package]
name = "swiftness_transcript"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
starknet-crypto.workspace = true

[features]
default = ["std"]
std = ["starknet-crypto/std"]
