[package]
name = "no_std_build"
version = "1.0.0"
edition = "2021"

[dependencies]
embedded-alloc = "0.6.0"
swiftness_air = { path = "../../crates/air", default-features = false }
swiftness_commitment = { path = "../../crates/commitment", default-features = false }
swiftness_fri = { path = "../../crates/fri", default-features = false }
swiftness_pow = { path = "../../crates/pow", default-features = false }
swiftness_stark = { path = "../../crates/stark", default-features = false }
swiftness_transcript = { path = "../../crates/transcript", default-features = false }

[features]
default = ["recursive", "keccak_160_lsb", "stone5"]
dex = ["swiftness_air/dex", "swiftness_stark/dex"]
recursive = ["swiftness_air/recursive", "swiftness_stark/recursive"]
recursive_with_poseidon = [
    "swiftness_air/recursive_with_poseidon",
    "swiftness_stark/recursive_with_poseidon",
]
small = ["swiftness_air/small", "swiftness_stark/small"]
starknet = ["swiftness_air/starknet", "swiftness_stark/starknet"]
starknet_with_keccak = [
    "swiftness_air/starknet_with_keccak",
    "swiftness_stark/starknet_with_keccak",
]
dynamic = [
    "swiftness_air/dynamic",
    "swiftness_stark/dynamic",
]
stone5 = [
    "swiftness_air/stone5",
    "swiftness_stark/stone5",
]
stone6 = [
    "swiftness_air/stone6",
    "swiftness_stark/stone6",
]
keccak_160_lsb = [
    "swiftness_pow/keccak",
    "swiftness_air/keccak_160_lsb",
    "swiftness_fri/keccak_160_lsb",
    "swiftness_stark/keccak_160_lsb",
    "swiftness_commitment/keccak_160_lsb",
]
keccak_248_lsb = [
    "swiftness_pow/keccak",
    "swiftness_air/keccak_248_lsb",
    "swiftness_fri/keccak_248_lsb",
    "swiftness_stark/keccak_248_lsb",
    "swiftness_commitment/keccak_248_lsb",
]
blake2s_160_lsb = [
    "swiftness_pow/blake2s",
    "swiftness_air/blake2s_160_lsb",
    "swiftness_fri/blake2s_160_lsb",
    "swiftness_stark/blake2s_160_lsb",
    "swiftness_commitment/blake2s_160_lsb",
]
blake2s_248_lsb = [
    "swiftness_pow/blake2s",
    "swiftness_air/blake2s_248_lsb",
    "swiftness_fri/blake2s_248_lsb",
    "swiftness_stark/blake2s_248_lsb",
    "swiftness_commitment/blake2s_248_lsb",
]